# Wireless-ESPeRS

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/instructions/: embedded-rust.instructions.md  general-coding.instructions.md  mark-content.instructions.md  rust.instructions.md  svelte5.instructions.md  typescript.instructions.md
xiao-firmware/: Cargo.toml  build.rs  memory.x
xiao-firmware/.cargo/: config.toml
xiao-firmware/src/: ap_mode.rs  lib.rs  web_server.rs
xiao-web/: package.json  svelte.config.js  tailwind.config.js  vite.config.ts
xiao-web/scripts/: postbuild.cjs
xiao-web/src/routes/: +page.svelte
xiao-web/src/routes/thread/: +page.svelte
xiao-web/src/routes/wifi/: +page.svelte
