[package]
edition = "2024"
name = "xiao-firmware"
version = "0.1.0"

[[bin]]
name = "xiao-firmware"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  # "task-arena-size-40960",
  "nightly",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
  "medium-ip",
  "proto-ipv4",
  "multicast",
  "dns",
  "mdns",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.7.0", features = ["defmt", "nightly"] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
esp-storage = { version = "0.5.0", features = [
  "bytewise-read",
  "esp32c6",
  "nor-flash",
] }
esp-wifi = { version = "0.13.0", features = ["esp32c6", "wifi", "defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
picoserve = { version = "0.16.0", features = ["alloc", "defmt", "embassy"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
sequential-storage = { version = "4.0.1", features = ["alloc"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release.package.esp-wifi]
opt-level = 3
